# sudoku-norvig-rs

./: .gitignore  Cargo.toml  README.md  sudoku.py  sugoku.go
.github/workflows/: rust.yml
examples/: bench.rs  sudoku.py
puzzles/: all.txt  hardest20x50.txt
src/: cell.rs  lib.rs  main.rs
